syntax = "proto3";

package appointy.accouting.v1;

option go_package = "pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "validate/chaku.proto";

service quickbookServer{

    //Employee Actions
    rpc CreateEmployee (CreateEmployeeRequest) returns (Employee) {}
    rpc DeleteEmployee(DeleteEmployeeRequest) returns (google.protobuf.Empty) {}

    //Timeactivity Actions
    rpc CreateBusinessHour(CreateBusinessHourRequest) returns (BusinessHour) {}
    rpc DeleteBusinessHours(DeleteBusinessHourRequest) returns (google.protobuf.Empty) {}

    //Staff Appointments
    rpc CreateStaffAppointments(CreateStaffAppointmentRequest) returns (PrepaidAppointment) {}

    //RPC for prepaid appointment.
    rpc CreatePrepaidAppointment(CreatePrepaidAppointmentRequest) returns (PrepaidAppointment){}
    rpc CancelNRefPrepaidAppointment(CancelNRefPrepaidAppointmentRequest) returns (PrepaidAppointment){}
    rpc UpdatePrepaidAppointment(UpdatePrepaidAppointmentRequest) returns (PrepaidAppointment){}
    rpc NoShowPrepaidAppointment(NoShowPrepaidAppointmentRequest) returns (PrepaidAppointment){}

    //RPC for partpaid appointment.
    rpc CreatePartpaidAppointment(CreatePartpaidAppointmentRequest) returns (PartpaidAppointment){}
    rpc CancelNRefPartpaidAppointment(CancelNRefPartpaidAppointmentRequest) returns (PartpaidAppointment){}
    rpc UpdatePartpaidAppointment(UpdatePartpaidAppointmentRequest) returns (PartpaidAppointment){}
    rpc NoShowPartpaidAppointment(NoShowPartpaidAppointmentRequest) returns (PartpaidAppointment){}

    //RPCs for gift certificates
    rpc SellGiftCertificate(SellGiftCertificateRequest) returns (PrepaidAppointment){}
    rpc RedeemGiftCertificate(RedeemGiftCertificateRequest) returns (PrepaidAppointment){}
    rpc CancelGiftCertificate(CancelGiftCertificateRequest) returns (PrepaidAppointment){}
    rpc ExpireGiftCertificate(ExpireGiftCertificateRequest) returns (PrepaidAppointment){}
    
    
    //create customers 
    rpc CreateCustomerAccount(CreateCustomerRequest) returns (Customer){}

    //RPCs for manual payment
    rpc CreateManualPayment(CreateManualPaymentRequest) returns (PartpaidAppointment){}
    rpc RemoveManualPayment(RemoveManualPaymentRequest) returns (PartpaidAppointment){}
    rpc UpdateManualPayment(UpdateManualPaymentRequest) returns (PartpaidAppointment){}

    //RPCs for discount coupon enabled sale
    rpc CreateDiscountCouponEnabledSale(CreateDiscountCouponEnabledSaleRequest) returns (PartpaidAppointment){}
    rpc RemoveDiscountCouponEnabledSale(RemoveDiscountCouponEnabledSaleRequest) returns (PartpaidAppointment){}
    rpc UpdateDiscountCouponEnabledSale(UpdateDiscountCouponEnabledSaleRequest) returns (PartpaidAppointment){}

} 
 


message AccoutingEmployeeLink{
    option (chaku.root) = true;
    option (chaku.prefix) = "ael";
    
    string id =1;
    string appointyId = 2;
    string externalId =3;
    AccountingIntegrationType AppType =4;
    map<string, string> metadata = 5;
}



//Messages for accounting basic methods handling
message CreateEmployeeRequest{
    string companyId  = 1;
    Employee employee = 2;
    AccountingIntegrationType appType =3;
}

message DeleteEmployeeRequest{
    string companyId =1;
    string appointyEmployeeId = 2;
    AccountingIntegrationType appType =3;
}

message CreateBusinessHourRequest{
    string companyId =1;
    BusinessHour businessHour =2;
    AccountingIntegrationType appType =3;
    
}

message DeleteBusinessHourRequest{
    string companyId =1;
    string appointyEmployeeId = 2;
    AccountingIntegrationType appType =3;
}

message CreateStaffAppointmentRequest{
    string CompanyID = 1;
    PrepaidAppointment StaffAppointment = 2;
}

message CreatePrepaidAppointmentRequest{
   string companyId = 1;
   PrepaidAppointment prepaidAppointment = 2;
}

message CancelNRefPrepaidAppointmentRequest{
     string companyId = 1;
     PrepaidAppointment prepaidAppointment = 2;
}

message UpdatePrepaidAppointmentRequest{
      string companyId = 1;
     PrepaidAppointment prepaidAppointment = 2;
}

message NoShowPrepaidAppointmentRequest{
    string CompanyId = 1;
    PrepaidAppointment PrepaidAppointment = 2;
}

message CreatePartpaidAppointmentRequest{
    string CompanyId = 1;
    PartpaidAppointment PartpaidAppointment = 2;    
}

message CancelNRefPartpaidAppointmentRequest{
    string CompanyId = 1;
    PartpaidAppointment PartpaidAppointment = 2;
}

message UpdatePartpaidAppointmentRequest{
    string CompanyId = 1;
    PartpaidAppointment PartpaidAppointment = 2;
}

message NoShowPartpaidAppointmentRequest{
   string CompanyId = 1;
    PartpaidAppointment PartpaidAppointment = 2;
}

message CreateInventoryRequest{
  string CompanyID = 1;
  Inventory inventory = 2;
  AccountingIntegrationType appType =3;
}

message RemoveInventoryRequest{
  string CompanyId = 1;
  Inventory inventory = 2;
}

message SaleNRemoveInventoryRequest{
  string CompanyId = 1;
  Inventory inventory = 2;
}

message ReturnNAddInventoryRequest{
  string CompanyId = 1;
  Inventory inventory = 2;
}

message SellGiftCertificateRequest{
  string CompanyId = 1;
  PrepaidAppointment PrepaidAppointment = 2;
}

message RedeemGiftCertificateRequest{
  string CompanyId = 1;
  PrepaidAppointment PrepaidAppointment = 2; 
}

message CancelGiftCertificateRequest{
  string CompanyId = 1;
  PrepaidAppointment PrepaidAppointment = 2; 
}

message ExpireGiftCertificateRequest{
  string CompanyId = 1;
  PrepaidAppointment PrepaidAppointment = 2; 
}

message CreateManualPaymentRequest{
  string CompanyId = 1;
  PrepaidAppointment PrepaidAppointment = 2; 
}

message RemoveManualPaymentRequest{
  string CompanyId = 1;
  PrepaidAppointment PrepaidAppointment = 2; 
}

message UpdateManualPaymentRequest{
  string CompanyId = 1;
  PrepaidAppointment PrepaidAppointment = 2; 
}

message CreateCustomerRequest{
    string companyId  = 1;
    Customer customer = 2;
    AccountingIntegrationType appType =3;
}

message RemoveCustomerRequest{
    string companyId  = 1;
    Customer customer = 2;
}

message UpdateCustomerRequest{
    string companyId  = 1;
    Customer customer = 2;   
}

message CreateDiscountCouponEnabledSaleRequest{
    string companyId  = 1;
    PrepaidAppointment PrepaidAppointment = 2;
}

message RemoveDiscountCouponEnabledSaleRequest{
    string companyId  = 1;
    PrepaidAppointment PrepaidAppointment = 2;
}

message UpdateDiscountCouponEnabledSaleRequest{
    string companyId  = 1;
    PrepaidAppointment PrepaidAppointment = 2;
}

//message Account{
//Unique indentifier for this object 
//   string Id = 1;
//Name of the account
//  string Name = 2;
//classification of the account.
//  AccountType AccType = 3;
//
//}

//message for implimenting RPC for account balencing.
//message PaymentResponse{
    //Id of account or type of account
  //  string id = 1;
    //accountyId of the entity
    //string AccountyId = 2;
    //advanced paid or not 
    //string PaymentStatus = 3;
    //Account type
    //string DepositAccType = 4;
    //CustomerId who made the payment
    //string CustomerId = 5;
    // Total transaction amount 
    //string TotalAmount = 6;
    // Reference of the currency
    //string CurrencyRef = 7;
    //Customer status for transaction
    //string CustomerStatus = 8;
    // Synctoken for granting only one user at a time.
    //string SyncToken = 9;
    //Date on which payment occured.
     //.google.protobuf.Timestamp createDate = 10;
    // Additional data of account
    //map<string, string> metadata = 11;
//}


//messages for creating objects used in rpcs
message Employee {
    // Id of employee
    string id = 1;
    // appointy id 
    string appointyId = 2;
    // First Name of the employee
    string firstName = 3;
    // Last Name of the employee
    string lastName = 4;
    // Unique Email of the employee
    string email = 5;
    // Url of the profile image
    string profileImage =6;
    // Gender of the employee
    Gender gender = 7;
    // employee Number of the employee
    string employeeNumber = 8;
    // phone Number of the employee
    string phoneNumber = 9;
    // department of employee
    string department = 10;
    // designation of the employee
    string designation = 11;
    // Additional data of employee
    map<string, string> metadata = 12;
    // Date on which employee was hired
    .google.protobuf.Timestamp hireDate = 13;
}


message BusinessHour{
  
    string appointyEmployeeId = 1;

    string employeeId =2;
    
    //time at which work starts 
    .google.protobuf.Timestamp createDate = 3;

    //name of staff.
    string Name = 4;
    //description
    string Description = 5;
    //total time of work
    string TotalTime = 6;
}


message PrepaidAppointment{
    //Id of account or type of account
    string id = 1;
    //appointy Id
    string appointyId = 2;
    //advanced paid or not 
    bool PaymentStatus = 3;
    //Account ID
    string DepositeAccId = 4;
    //optional boolean for handling owners policy like giving refund or commission etc.
    bool PolicyApplied = 5;
    //CustomerId who made the payment
    string CustomerId = 6;
    // Total transaction amount 
    string TotalAmount = 7;
    // Reference of the currency
    string CurrencyRef = 8;
    //Customer status for transaction
    string CustomerStatus = 9;
    //Synctoken for granting only one user at a time.
    string SyncToken = 10;
    //Date on which payment occured.
     .google.protobuf.Timestamp createDate = 11;
    // Additional data of account
    map<string, int64> metadata = 12;
    // Additional data of account for string return
    map<string, string> metadataString = 13;
}

message PartpaidAppointment{
    //Id of account or type of account
    string id = 1;
    //appointy Id
    string appointyId = 2;
    //advanced paid or not 
    bool PaymentStatus = 3;
    //optional boolean for handling owners policy like giving refund or commission etc.
    bool PolicyApplied = 4;
    // Total transaction amount 
    string TotalAmount = 5;
    // Reference of the currency
    string CurrencyRef = 6;
    //Date on which payment occured.
     .google.protobuf.Timestamp createDate = 7;
    // Additional data of account
    map<string, int64> metadata = 8;
    // Additional data of account for string return
    map<string, string> metadataString = 9;
}

message Customer{
    // Id of customer
    string id = 1;
    //appointy Id correlation
    string AppointyId = 2;
    // First Name of the customer
    string firstName = 3;
    // Last Name of the customer
    string lastName = 4;
    // Unique Email of the customer
    string email = 5;
    // Gender of the customer
    Gender gender = 6;
    // phone Number of the customer
    string phoneNumber = 7;
    // Account Number of customer
    string acctnum = 8;
    // Type of account the customer have
    string accttype = 9;
    //Soft deleting. 
    string VisState =10;
    //name of organization customer is associated
    string CustomerOrg = 11;
    // Date on which account of customer created
    .google.protobuf.Timestamp createDate = 12;
    // Additional data of customer
    map<string, string> metadata = 13;
}

message Inventory{
    //object indentifier
    string Id = 1;
    //Appointy Id of the Vendor.
    string VendorAppointyId = 2;
    //inventory id.
    string InventoryId = 3;
    //name of the Item
    string Name = 4;
    //Payment done right now or create a liability.
    bool PaymentDone = 5;
    //cost of Item
    string ItemCost = 6;
    //item quantity.
    string Qnt = 7;
    //purchase detail
    string PurchaseDetail = 8;
    //Item description
    string ItemDesc = 9;
    //Item deleted or remain in the list.
    string ItemVisState = 10;
    //If the item sold or lost
    bool StateOfItem = 11;
    //Tax id for item.
    string TxnId = 12;
    //Date on which date on which item Purchased.
    .google.protobuf.Timestamp PurchaseDate = 13;
    // Additional data of item.
    map<string, string> metadata = 14;
 
}

enum Gender {
    UNSPECIFIED = 0;
    MALE = 1;
    FEMALE = 2;
}

enum AccountingIntegrationType{
    UNDEFINED = 0;
    QUICKBOOKS =1;
    XERO=2;
    FRESHBOOK=3;
}

enum AccountType{
    ASSET = 0;
    EQUITY = 1;
    EXPENSE = 2;
    LIABILITY =3;
    REVENUE = 4;
}

	
